--- a/app/src/main/res/layout/edit_bar.xml
+++ b/app/src/main/res/layout/edit_bar.xml
@@ -8,7 +8,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="@color/color_primary"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -19,10 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="16sp"
-            android:textColor="#ffffff"
+            android:textColor="@color/color_accent_text"
             android:drawableStart="@drawable/ic_close_white_24dp"
             android:drawablePadding="2dip"
-            android:background="#00000000"
+            android:background="@android:color/transparent"
             android:paddingEnd="30dip"
             android:paddingStart="26dip"
             android:layout_marginStart="16dp"
@@ -39,10 +39,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="16sp"
-            android:textColor="#ffffff"
+            android:textColor="@color/color_accent_text"
             android:drawableStart="@drawable/ic_done_white"
             android:drawablePadding="2dip"
-            android:background="#00000000"
+            android:background="@android:color/transparent"
             android:paddingEnd="30dip"
             android:paddingStart="26dip"
             app:layout_constraintEnd_toEndOf="parent"
