--- a/app/src/main/res/layout/fragment_appointment_view.xml
+++ b/app/src/main/res/layout/fragment_appointment_view.xml
@@ -11,6 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Include our standard view header -->
+        <include layout="@layout/view_top_bar"
+            android:id="@+id/appointment_view_bar"
+            />
+
         <!-- Customer name -->
         <TextView
             android:id="@+id/txt_appt_view_customer_name"
@@ -22,7 +27,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/appointment_view_bar"/>
 
         <!-- Customer email -->
         <TextView
