--- a/app/src/main/res/layout/fragment_financial_report.xml
+++ b/app/src/main/res/layout/fragment_financial_report.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
-            android:text="@string/bttn_calculate"
+            android:text="@string/button_calculate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lin_lay_dates" />
 
