--- a/app/src/main/res/layout/fragment_goal_edit.xml
+++ b/app/src/main/res/layout/fragment_goal_edit.xml
@@ -12,7 +12,7 @@
 
         <!-- Include our standard edit header -->
         <include
-            android:id="@+id/edit_bar_in_goal"
+            android:id="@+id/goal_edit_bar"
             layout="@layout/edit_bar" />
 
 
@@ -40,7 +40,7 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/etxt_repeat_time"
-            app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_goal" />
+            app:layout_constraintTop_toBottomOf="@+id/goal_edit_bar" />
 
         <TextView
             android:id="@+id/txt_start_date"
