--- a/app/src/main/res/layout/fragment_goal_view.xml
+++ b/app/src/main/res/layout/fragment_goal_view.xml
@@ -10,6 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Include our standard view header -->
+        <include layout="@layout/view_top_bar"
+            android:id="@+id/goal_view_bar"
+            />
+
         <TextView
             android:id="@+id/txt_goal_view_name"
             android:layout_width="wrap_content"
@@ -21,7 +26,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/goal_view_bar" />
 
         <TextView
             android:id="@+id/txt_goal_detail"
@@ -69,7 +74,7 @@
             android:layout_height="33dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:text="@string/done"
+            android:text="@string/goal_done"
             android:textSize="18sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toStartOf="parent"
