--- a/app/src/main/res/layout/fragment_service_edit.xml
+++ b/app/src/main/res/layout/fragment_service_edit.xml
@@ -12,7 +12,7 @@
 
 
         <include
-            android:id="@+id/edit_bar_service_edit"
+            android:id="@+id/service_edit_bar"
             layout="@layout/edit_bar"/>
 
         <TextView
@@ -38,7 +38,7 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/etxt_service_description"
-            app:layout_constraintTop_toBottomOf="@+id/edit_bar_service_edit" />
+            app:layout_constraintTop_toBottomOf="@+id/service_edit_bar" />
 
         <TextView
             android:id="@+id/txt_service_description"
@@ -86,7 +86,7 @@
             android:id="@+id/txt_service_dollar_sign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dollar_sign"
+            android:text="@string/currency"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBaseline_toBaselineOf="@+id/etxt_service_price"
