--- a/app/src/main/res/layout/goal_adapter.xml
+++ b/app/src/main/res/layout/goal_adapter.xml
@@ -14,7 +14,6 @@
         android:layout_marginStart="16dp"
         android:text="@string/goal_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000"
         app:layout_constraintEnd_toStartOf="@+id/goal_adapter_complete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +26,6 @@
         android:layout_marginLeft="16dp"
         android:text="@string/goal_end_date"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goal_adapter_title"
@@ -41,7 +39,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:text="@string/goal_complete"
+        android:text="@string/goal_done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
