--- a/app/src/main/res/layout/view_bar.xml
+++ b/app/src/main/res/layout/view_bar.xml
@@ -42,7 +42,7 @@
             android:text="@string/title"/>
 
         <Button
-            android:id="@+id/btn_view_bar_save"
+            android:id="@+id/btn_view_bar_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
