--- a/app/src/main/res/layout/view_bar.xml
+++ b/app/src/main/res/layout/view_bar.xml
@@ -8,7 +8,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="@color/color_primary"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
