--- a/app/src/main/res/layout/fragment_service_view.xml
+++ b/app/src/main/res/layout/fragment_service_view.xml
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="24dp"
-            android:background="@color/colorAccent"
+            android:background="@color/color_accent"
             android:text="@string/button_edit"
             android:textColor="#ffffff"
             android:textStyle="bold"
