--- a/app/src/main/res/layout/edit_bar.xml
+++ b/app/src/main/res/layout/edit_bar.xml
@@ -8,7 +8,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            android:background="@color/color_primary"
+            android:background="@color/colorPrimary"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="16sp"
-            android:textColor="@color/color_accent_text"
+            android:textColor="@color/colorAccentText"
             android:drawableStart="@drawable/ic_close_white_24dp"
             android:drawablePadding="2dip"
             android:background="@android:color/transparent"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="16sp"
-            android:textColor="@color/color_accent_text"
+            android:textColor="@color/colorAccentText"
             android:drawableStart="@drawable/ic_done_white"
             android:drawablePadding="2dip"
             android:background="@android:color/transparent"
