--- a/app/src/main/res/layout/fragment_customer_view.xml
+++ b/app/src/main/res/layout/fragment_customer_view.xml
@@ -63,9 +63,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="24dp"
-            android:background="@color/color_accent"
+            android:background="@color/colorAccent"
             android:text="@string/set_appt"
-            android:textColor="@color/color_accent_text"
+            android:textColor="@color/colorAccentText"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
