--- a/app/src/main/res/layout/fragment_goal_list.xml
+++ b/app/src/main/res/layout/fragment_goal_list.xml
@@ -31,7 +31,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             app:srcCompat="@drawable/ic_add_black_24dp"
-            android:backgroundTint="@color/color_accent"/>
+            android:backgroundTint="@color/colorAccent"/>
 
         <ListView
             android:id="@+id/goal_list"
