--- a/app/src/main/res/layout/fragment_goal_view.xml
+++ b/app/src/main/res/layout/fragment_goal_view.xml
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="24dp"
-            android:background="@color/color_accent"
+            android:background="@color/colorAccent"
             android:text="@string/button_edit"
             android:textColor="#ffffff"
             android:textStyle="bold"
