--- a/app/src/main/res/layout/fragment_sale_list.xml
+++ b/app/src/main/res/layout/fragment_sale_list.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
-            android:backgroundTint="@color/color_accent"
+            android:backgroundTint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:srcCompat="@drawable/ic_add_black_24dp" />
