--- a/app/src/main/res/layout/fragment_service_list.xml
+++ b/app/src/main/res/layout/fragment_service_list.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             app:srcCompat="@drawable/ic_add_black_24dp"
-            android:backgroundTint="@color/color_accent"/>
+            android:backgroundTint="@color/colorAccent"/>
 
     <ListView
         android:id="@+id/service_list"
