--- a/app/src/main/res/layout/main_action_bar.xml
+++ b/app/src/main/res/layout/main_action_bar.xml
@@ -14,7 +14,7 @@
         android:id="@+id/main_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_primary"
+        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
