--- a/app/src/main/res/layout/nav_bar_header.xml
+++ b/app/src/main/res/layout/nav_bar_header.xml
@@ -31,7 +31,7 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="bottom"
             android:text="@string/app_name"
-            android:textColor="@color/color_accent_text"
+            android:textColor="@color/colorAccentText"
             android:textSize="14sp"/>
 
         <TextView
@@ -42,7 +42,7 @@
             android:fontFamily="sans-serif"
             android:gravity="bottom"
             android:text="@string/business_address"
-            android:textColor="@color/color_accent_text"
+            android:textColor="@color/colorAccentText"
             android:textSize="14sp"/>
 
 
