--- a/app/src/main/res/layout/view_top_bar.xml
+++ b/app/src/main/res/layout/view_top_bar.xml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/color_primary"
+        android:background="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +28,7 @@
         android:paddingStart="26dip"
         android:singleLine="true"
         android:text="@string/button_edit"
-        android:textColor="@color/color_accent_text"
+        android:textColor="@color/colorAccentText"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
