--- a/app/src/main/res/layout/fragment_expense_list.xml
+++ b/app/src/main/res/layout/fragment_expense_list.xml
@@ -10,6 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/expense_list_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floating_add_btn_expense"
             android:layout_width="wrap_content"
