--- a/app/src/main/res/layout/fragment_service_edit.xml
+++ b/app/src/main/res/layout/fragment_service_edit.xml
@@ -84,13 +84,20 @@
 
         <TextView
             android:id="@+id/txt_service_dollar_sign"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="17dp"
+            android:layout_height="23dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="28dp"
             android:text="@string/currency"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_service_price"
-            app:layout_constraintStart_toStartOf="@+id/etxt_service_price" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/etxt_service_price"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintStart_toEndOf="@+id/txt_service_price"
+            app:layout_constraintTop_toBottomOf="@+id/txt_service_description"
+            app:layout_constraintVertical_bias="0.002" />
 
 
         <EditText
@@ -98,10 +105,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.941"
             app:layout_constraintStart_toStartOf="@+id/etxt_service_description"
             app:layout_constraintTop_toBottomOf="@+id/etxt_service_description" />
 
