ui tweak in customer view

--- a/app/src/main/res/layout/fragment_customer_view.xml
+++ b/app/src/main/res/layout/fragment_customer_view.xml
@@ -101,12 +101,12 @@
             android:id="@+id/customer_add_appointment_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:clickable="true"
             android:src="@drawable/ic_event_black_24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/rectangle"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/txt_view_phone" />
 
     </android.support.constraint.ConstraintLayout>
 
