--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0c419d</color>
+    <color name="colorPrimary">#1976d2</color>
     <color name="colorAccent">#C1251A</color>
-    <color name="colorPrimaryDark">#032476</color>
+    <color name="colorPrimaryDark">#0d47a1</color>
     <color name="colorAccentText">#ffffff</color>
 </resources>
