--- a/app/src/main/res/layout/fragment_financial_report.xml
+++ b/app/src/main/res/layout/fragment_financial_report.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.evans.ui.FinancialReportFragment">
+    tools:context="com.example.evans.ui.FinancialReportFragment"
+    android:background="#ffffff">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
