--- a/app/src/main/res/layout/fragment_appointment_view.xml
+++ b/app/src/main/res/layout/fragment_appointment_view.xml
@@ -27,7 +27,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appointment_view_bar"/>
+            app:layout_constraintTop_toBottomOf="@id/appointment_view_bar"/>
 
         <!-- Customer email -->
         <TextView
