--- a/app/src/main/res/layout/fragment_appointment_view.xml
+++ b/app/src/main/res/layout/fragment_appointment_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <!-- Include our standard view header -->
-        <include layout="@layout/view_top_bar"
+        <include layout="@layout/view_bar"
             android:id="@+id/appointment_view_bar"
             />
 
