--- a/app/src/main/res/layout/fragment_start_page.xml
+++ b/app/src/main/res/layout/fragment_start_page.xml
@@ -45,7 +45,7 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:clickable="true"
-                    android:src="@android:drawable/ic_menu_my_calendar"
+                    android:src="@drawable/ic_exit_to_app_black_24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
@@ -112,9 +112,10 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:clickable="true"
-                    android:src="@drawable/ic_goal"
+                    android:src="@drawable/ic_exit_to_app_black_24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:rippleColor="@color/colorAccentText" />
 
 
             </android.support.constraint.ConstraintLayout>
