--- a/app/src/main/res/layout/fragment_goal_view.xml
+++ b/app/src/main/res/layout/fragment_goal_view.xml
@@ -56,9 +56,9 @@
 
         <TextView
             android:id="@+id/txt_goal_view_end_date"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginTop="24dp"
             android:text="@string/goal_end_date"
             android:textSize="20sp"
