--- a/app/src/main/res/layout/goal_adapter.xml
+++ b/app/src/main/res/layout/goal_adapter.xml
@@ -31,6 +31,8 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"
                 android:text="@string/goal_title"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:clickable="false"
                 android:focusable="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -43,8 +45,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/goal_end_date"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:clickable="false"
                 android:focusable="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
