--- a/app/src/main/res/layout/fragment_start_page.xml
+++ b/app/src/main/res/layout/fragment_start_page.xml
@@ -9,14 +9,19 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:id="@+id/top_card_view"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             app:cardElevation="4dp"
             app:cardCornerRadius="4dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,10 +74,12 @@
         <android.support.v7.widget.CardView
             android:id="@+id/bottom_card_view"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             app:cardElevation="4dp"
             app:cardCornerRadius="4dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +88,8 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                >
 
                 <ProgressBar
                     android:id="@+id/goal_start_page_progress_bar"
@@ -122,7 +130,7 @@
 
         </android.support.v7.widget.CardView>
 
-
+    </LinearLayout>
 
 
     </android.support.constraint.ConstraintLayout>
