--- a/app/src/main/res/layout/goal_adapter.xml
+++ b/app/src/main/res/layout/goal_adapter.xml
@@ -38,7 +38,7 @@
                 android:maxLines="1"
                 android:clickable="false"
                 android:focusable="false"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 app:layout_constraintEnd_toStartOf="@+id/goal_adapter_complete"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -54,7 +54,7 @@
                 android:maxLines="1"
                 android:clickable="false"
                 android:focusable="false"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/goal_adapter_title"
@@ -68,7 +68,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:text="@string/goal_done"
                 android:focusable="false"
                 app:layout_constraintBottom_toBottomOf="parent"
