can see all customer's appointments from customer view

--- a/app/src/main/res/layout/fragment_customer_view.xml
+++ b/app/src/main/res/layout/fragment_customer_view.xml
@@ -107,6 +107,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/txt_view_phone" />
 
+        <Button
+            android:id="@+id/bttn_see_all_appt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/button_see_all_appt"
+            android:background="@color/colorAccent"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
+
     </android.support.constraint.ConstraintLayout>
 
     <!-- TODO next appointment portion -->
