--- a/app/src/main/res/layout/fragment_sale_edit.xml
+++ b/app/src/main/res/layout/fragment_sale_edit.xml
@@ -88,6 +88,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="numberDecimal"
+            android:focusable="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/spinner_sale_type"
             app:layout_constraintTop_toBottomOf="@+id/etxt_sale_date" />
