--- a/app/src/main/res/layout/sale_adapter.xml
+++ b/app/src/main/res/layout/sale_adapter.xml
@@ -33,6 +33,7 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:text="@string/default_string"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
