--- a/app/src/main/res/layout/fragment_start_page.xml
+++ b/app/src/main/res/layout/fragment_start_page.xml
@@ -32,16 +32,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/appointment_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/appointments"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
                 <ProgressBar
                     android:id="@+id/appointment_start_page_progress_bar"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="invisible"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/btn_appointment_see_more"
@@ -58,12 +69,13 @@
                     android:id="@+id/appointment_list_view_start_page"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="32dp"
+                    android:background="@android:color/transparent"
                     android:divider="@null"
                     android:dividerHeight="8dp"
-                    android:background="@android:color/transparent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/appointment_header"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -91,6 +103,17 @@
                 android:layout_height="match_parent"
                 >
 
+                <TextView
+                    android:id="@+id/goals_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/goals"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
                 <ProgressBar
                     android:id="@+id/goal_start_page_progress_bar"
                     style="?android:attr/progressBarStyle"
@@ -106,10 +129,11 @@
                     android:id="@+id/goal_list_view_start_page"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="32dp"
                     android:divider="@null"
                     android:dividerHeight="8dp"
                     android:background="@android:color/transparent"
+                    app:layout_constraintTop_toBottomOf="@id/goals_header"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
